# vitaLogUtils

./: LICENSE  README.md
log_client/: CMakeLists.txt  Makefile
log_client/include/: logUtil.h
log_client/src/: logUtil.cpp
log_prx_module/: CMakeLists.txt  log_module.yml  main.c
log_prx_module/include/: main.h
